--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: fluent/fluent-bit:latest
     volumes:
       - ./fluentbit/config:/fluent-bit/etc
-      - ./fluentbit/config/fluent-local.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./fluentbit/config/fluent-development.conf:/fluent-bit/etc/fluent-bit.conf
       - fluentbit_logs_output:/output
       - fluentbit_logs_db:/persist
       - django_logs:/logs/django:ro
@@ -15,6 +15,9 @@ services:
     environment:
       GRAFANA_API_KEY: ${GRAFANA_API_KEY}
       PROMETHEUS_API_KEY: ${GRAFANA_API_KEY}
+      # Used in staging/prod environment
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
   django:
     container_name: cbr_django
     build:
