--- a/fluentbit/config/fluent-development.conf
+++ b/fluentbit/config/fluent-development.conf
@@ -3,13 +3,13 @@
 [SERVICE]
     parsers_file json-parser.conf
 
-@INCLUDE ./inputs/node-input.conf
 @INCLUDE ./inputs/docker-input.conf
 @INCLUDE ./inputs/tail-input.conf
 @INCLUDE ./inputs/fluentmetrics-input.conf
-
+@INCLUDE ./inputs/metrics-input.conf
 
 @INCLUDE ./outputs/development/node-output.conf
 @INCLUDE ./outputs/development/tail-output.conf
 @INCLUDE ./outputs/development/docker-output.conf
+# for testing, comment out the following line once dev server testing is complete
 @INCLUDE ./outputs/staging-prod/cloudwatch-output.conf
