--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -10,10 +10,9 @@ version: "3.9"
 services:
   fluentbit:
     container_name: cbr_fluentbit
-    image: fluent/fluent-bit:latest
+    image: fluent/fluent-bit:2.0.5
     volumes:
       - ./fluentbit/config:/fluent-bit/etc
-      - ./fluentbit/config/fluent-${ENV:-local}.conf:/fluent-bit/etc/fluent-bit.conf
       - fluentbit_logs_output:/output
       - django_logs:/logs/django:ro
       - fluentbit_logs_db:/persist
@@ -26,6 +25,7 @@ services:
       # Used in staging/prod environment
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    command: ["fluent-bit", "-c", "/fluent-bit/etc/fluent-${ENV:-local}.conf"]
   django:
     image: drbfraser/hopehealthaction_cbr_backend:$IMAGE_TAG
     build:
