--- a/fluentbit/config/inputs/tail-input.conf
+++ b/fluentbit/config/inputs/tail-input.conf
@@ -1,6 +1,17 @@
 [INPUT]
     Name                tail
-    Path                /logs/*/*.log 
+    Path                /logs/django/*.log 
+    # ^ e.g. /logs/mysql/error.log, /logs/flask/application.log
+    Tag                 file_*
+    Path_Key            file_path
+    DB                  /persist/logs.db
+    Skip_Empty_Lines    on
+    Read_from_Head      on 
+    Parser              json_parser
+
+[INPUT]
+    Name                tail
+    Path                /logs/caddy/*.log 
     # ^ e.g. /logs/mysql/error.log, /logs/flask/application.log
     Tag                 file_*
     Path_Key            file_path
