change metrics collection to every 1 minute

--- a/fluentbit/config/inputs/metrics-input.conf
+++ b/fluentbit/config/inputs/metrics-input.conf
@@ -1,13 +1,13 @@
 [INPUT]
     Name   mem
     Tag    metric_memory
+    Interval_Sec 60  # Collect metrics every 60 seconds (1 minute)
 
 [INPUT]
     Name cpu
-    Tag  metric_cpu
+    Tag    metric_cpu
+    Interval_Sec 60  # Collect metrics every 60 seconds (1 minute)
 
-# Append tags to the record
-# https://docs.fluentbit.io/manual/pipeline/filters/lua#code-examples
 [FILTER]
     Name Lua
     Match metric_*
