--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -1,10 +1,9 @@
-name: 415-hha_cbr/cbr-platform
-# Main GitHub CI/CD pipeline definition file
+name: Main CI/CD -- Build, Test, Push to Docker Hub, Deploy to Dev Server
 # For syntax, see: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 
 on:
   push:
-    branches: [ main, staging ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -20,8 +19,8 @@ env:
   # otherwise, NPM gives EACCES error trying to mkdir /github/home/.npm
   # Using the /isolated_build/ folder (inside the container) keeps permissions straight
   npm_config_cache: /isolated_build/.npm-cache    
-jobs:
 
+jobs:
   display_github_contexts:
     runs-on: [self-hosted, docker]
     steps:
@@ -259,10 +258,9 @@ jobs:
           echo "::set-output name=tag::$IMAGE_TAG"
 
   build-docker-publish-docker-images:
-    needs: [build-common, build-mobile, build-web, build-server, export-image-tag]
+    needs: [build-common, build-web, build-server, export-image-tag]
     # needs: [export-image-tag]   # Used for faking and testing
     runs-on: [self-hosted, docker]
-    if: ${{ github.ref_name == 'main' }}
     timeout-minutes: 60
     env:
       IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
@@ -316,7 +314,6 @@ jobs:
 #   Development (dev) server
   dev-server-deploy-from-dockerhub:
     needs: [build-docker-publish-docker-images, export-image-tag]
-    if: ${{ github.ref_name == 'main' }}
     uses: ./.github/workflows/deploy-from-dockerhub.yml
     with:
       RUNNER_NAME: deploy-development
@@ -326,32 +323,8 @@ jobs:
 
   dev-retag-and-upload-to-dockerhub:
     needs: [build-docker-publish-docker-images, export-image-tag]
-    if: ${{ github.ref_name == 'main' }}
     uses: ./.github/workflows/retag-and-upload-dockerhub.yml
     with:
       IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
       BRANCH_TAG: dev
     secrets: inherit
-
-
-  # Staging (stg) server
-  staging-server-deploy-from-dockerhub:
-    needs: [export-image-tag]
-    if: ${{ github.ref_name == 'staging' }}
-    uses: ./.github/workflows/deploy-from-dockerhub.yml
-    with:
-        RUNNER_NAME: deploy-staging
-        DOMAIN:      cbr-stg.cmpt.sfu.ca
-        IMAGE_TAG:   ${{ needs.export-image-tag.outputs.image_tag }}
-    secrets: inherit
-
-  staging-retag-and-upload-to-dockerhub:
-    needs: [export-image-tag]
-    if: ${{ github.ref_name == 'staging' }}
-    uses: ./.github/workflows/retag-and-upload-dockerhub.yml
-    with:
-        IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
-        BRANCH_TAG: stg
-    secrets: inherit
-
-  
