remove aws output for dev server logs

--- a/fluentbit/config/fluent-development.conf
+++ b/fluentbit/config/fluent-development.conf
@@ -1,5 +1,5 @@
 @SET OUTPUT_DIR=/output
-@SET LOG_GROUP_NAME=cbr-devtest
+# @SET LOG_GROUP_NAME=cbr-devtest
 [SERVICE]
     parsers_file json-parser.conf
 
@@ -12,4 +12,4 @@
 @INCLUDE ./outputs/development/tail-output.conf
 @INCLUDE ./outputs/development/docker-output.conf
 # for testing, comment out the following line once dev server testing is complete
-@INCLUDE ./outputs/staging-prod/cloudwatch-output.conf
+# @INCLUDE ./outputs/staging-prod/cloudwatch-output.conf
