--- a/fluentbit/config/outputs/staging-prod/cloudwatch-output.conf
+++ b/fluentbit/config/outputs/staging-prod/cloudwatch-output.conf
@@ -11,22 +11,13 @@
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match file_django*
-    region us-west-2
-    auto_create_group true
-    log_key log
-    metric_namespace ${LOG_GROUP_NAME}/logs
-    log_group_name ${LOG_GROUP_NAME}/django
-    log_stream_prefix tail-django-
-
-[OUTPUT]
-    Name cloudwatch_logs
-    Match file_caddy*
+    Match file_*
     region us-west-2
     auto_create_group true
     metric_namespace ${LOG_GROUP_NAME}/logs
-    log_group_name ${LOG_GROUP_NAME}/caddy
-    log_stream_prefix tail-caddy-
+    log_group_name ${LOG_GROUP_NAME}/fallback
+    log_group_template ${LOG_GROUP_NAME}$file_path
+    log_stream_prefix tail-
 
 [OUTPUT]
     Name cloudwatch_logs
