--- a/fluentbit/config/fluent-staging.conf
+++ b/fluentbit/config/fluent-staging.conf
@@ -1,4 +1,4 @@
-@SET LOG_GROUP_NAME=cbr-prod
+@SET LOG_GROUP_NAME=cbr-staging
 
 @INCLUDE ./inputs/tail-input.conf
 @INCLUDE ./inputs/docker-input.conf
