--- a/fluentbit/config/outputs/staging-prod/cloudwatch-output.conf
+++ b/fluentbit/config/outputs/staging-prod/cloudwatch-output.conf
@@ -1,7 +1,7 @@
 [OUTPUT]
     Name cloudwatch_logs
     Match docker.*
-    region us-west-2
+    region ${AWS_LOGGING_REGION}
     auto_create_group true
     log_key log
     metric_namespace ${LOG_GROUP_NAME}/logs
@@ -12,7 +12,7 @@
 [OUTPUT]
     Name cloudwatch_logs
     Match file_*
-    region us-west-2
+    region ${AWS_LOGGING_REGION}
     auto_create_group true
     metric_namespace ${LOG_GROUP_NAME}/logs
     log_group_name ${LOG_GROUP_NAME}/fallback
@@ -22,7 +22,7 @@
 [OUTPUT]
     Name cloudwatch_logs
     Match metric_*
-    region us-west-2
+    region ${AWS_LOGGING_REGION}
     auto_create_group true
     log_format json/emf
     metric_namespace ${LOG_GROUP_NAME}/metrics
