--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,11 +42,13 @@
         "expo-task-manager": "~11.1.1",
         "expo-updates": "~0.16.3",
         "formik": "^2.2.9",
+        "i18next": "^23.6.0",
         "in": "^0.19.0",
         "mobile": "^0.0.1",
         "native-base": "^2.15.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-i18next": "^13.3.1",
         "react-is-mounted-hook": "^1.1.1",
         "react-native": "0.71.3",
         "react-native-background-timer": "^2.4.1",
