--- a/common/package.json
+++ b/common/package.json
@@ -13,13 +13,15 @@
         "@types/react": "^17.0.9",
         "base64url": "^3.0.1",
         "fetch-mock": "^7.3.9",
+        "i18next": "^23.12.2",
         "jest": "^27.0.6",
         "jest-junit": "^12.2.0",
         "node-abort-controller": "^2.0.0",
         "node-fetch": "^2.6.1",
         "prettier": "^2.3.0",
-        "react": "16.13.1",
-        "react-test-renderer": "16.13.1",
+        "react": "18.2.0",
+        "react-i18next": "^15.0.0",
+        "react-test-renderer": "18.2.0",
         "ts-jest": "^27.0.3",
         "typescript": "~4.0.0"
     },
