--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,13 +42,13 @@
         "expo-task-manager": "~11.1.1",
         "expo-updates": "~0.16.3",
         "formik": "^2.2.9",
-        "i18next": "^23.6.0",
+        "i18next": "^23.12.2",
         "in": "^0.19.0",
         "mobile": "^0.0.1",
         "native-base": "^2.15.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-i18next": "^13.3.1",
+        "react-i18next": "^15.0.0",
         "react-is-mounted-hook": "^1.1.1",
         "react-native": "0.71.3",
         "react-native-background-timer": "^2.4.1",
@@ -94,7 +94,7 @@
         "@babel/plugin-proposal-decorators": "^7.15.8",
         "@expo/config-types": "^41.0.0",
         "@types/node": "^15.12.2",
-        "@types/react": "~18.0.27",
+        "@types/react": "^18.3.3",
         "@types/react-native": "~0.70.6",
         "@types/react-native-material-dropdown": "^0.11.4",
         "@types/react-router-dom": "^5.1.7",
