--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
         "@react-navigation/native": "^5.9.4",
         "@react-navigation/stack": "^5.14.5",
         "@types/react-native-vector-icons": "^6.4.6",
+        "async-mutex": "0.5.0",
         "core-js": "^3.15.2",
         "dotenv": "^10.0.0",
         "expo": "^48.0.0",
