--- a/common/package.json
+++ b/common/package.json
@@ -31,6 +31,6 @@
         "react-i18next": "^15.0.0",
         "react-test-renderer": "18.2.0",
         "ts-jest": "^27.0.3",
-        "typescript": "~4.0.0"
+        "typescript": "^5.6.2"
     }
 }
