--- a/web/package.json
+++ b/web/package.json
@@ -39,7 +39,6 @@
         "react-scripts": "5.0.1",
         "recharts": "^2.7.2",
         "socket.io-client": "^4.7.1",
-        "typescript": "~4.0.0",
         "web-vitals": "^0.2.4",
         "yup": "^0.32.8"
     },
@@ -68,6 +67,7 @@
         ]
     },
     "devDependencies": {
-        "prettier": "2.3.0"
+        "prettier": "2.3.0",
+        "typescript": "^5.6.2"
     }
 }
