--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,4 +1,7 @@
 {
+    "engines": {
+        "node": ">=14.21.3 <15"
+    },
     "scripts": {
         "start": "react-native start",
         "android": "react-native run-android",
