--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,9 @@
     "name": "@cbr/web",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "node": ">=14.21.3 <15"
+    },
     "dependencies": {
         "@craco/craco": "^6.1.2",
         "@emotion/react": "^11.11.0",
