--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,8 +25,8 @@
         "@nozbe/watermelondb": "^0.23.0",
         "@react-native-async-storage/async-storage": "1.17.11",
         "@react-native-community/datetimepicker": "6.7.3",
-        "@react-native-community/masked-view": "0.1.10",
         "@react-native-community/netinfo": "9.3.7",
+        "@react-native-masked-view/masked-view": "^0.3.1",
         "@react-native-picker/picker": "2.4.8",
         "@react-navigation/material-bottom-tabs": "^5.3.15",
         "@react-navigation/native": "^5.9.4",
