--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,7 +28,7 @@
         "@react-native-community/datetimepicker": "6.7.3",
         "@react-native-community/netinfo": "9.3.7",
         "@react-native-masked-view/masked-view": "^0.3.1",
-        "@react-native-picker/picker": "2.4.8",
+        "@react-native-picker/picker": "^2.4.8",
         "@react-navigation/material-bottom-tabs": "^5.3.15",
         "@react-navigation/native": "^5.9.4",
         "@react-navigation/stack": "^5.14.5",
@@ -50,7 +50,6 @@
         "i18next": "^23.12.2",
         "in": "^0.19.0",
         "mobile": "^0.0.1",
-        "native-base": "^2.15.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "^15.0.0",
