--- a/web/package.json
+++ b/web/package.json
@@ -13,16 +13,17 @@
         "@material-ui/data-grid": "^4.0.0-alpha.20",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
-        "@mui/icons-material": "^5.11.16",
-        "@mui/material": "^5.13.3",
+        "@mui/icons-material": "^5.16.7",
+        "@mui/material": "^5.16.7",
+        "@mui/styles": "^6.1.2",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
         "@types/jest": "^26.0.20",
         "@types/node": "^12.19.14",
-        "@types/react": "^16.14.2",
+        "@types/react": "^18.3.11",
         "@types/react-csv": "^1.1.1",
-        "@types/react-dom": "^16.9.10",
+        "@types/react-dom": "^18.3.0",
         "@types/react-router-dom": "^5.1.7",
         "bootstrap": "^4.5.3",
         "browser-image-compression": "^1.0.17",
