--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,7 @@
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
         "formik": "^2.2.6",
-        "formik-material-ui": "^3.0.1",
+        "formik-mui": "^5.0.0-alpha.1",
         "i18next": "^23.12.2",
         "jwt-decode": "^3.1.2",
         "react": "18.2.0",
