--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,9 @@
         "web-vitals": "^0.2.4",
         "yup": "^0.32.8"
     },
+    "overrides": {
+        "typescript": "^5.6.2"
+    },
     "scripts": {
         "start": "craco start",
         "build": "craco build",
