--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
         "@craco/craco": "^7.1.0",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@material-ui/data-grid": "^4.0.0-alpha.20",
         "@mui/icons-material": "^5.16.7",
         "@mui/material": "^5.16.7",
         "@mui/styles": "^6.1.2",
