--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,8 @@
         "@craco/craco": "^7.1.0",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
-        "@material-ui/data-grid": "^4.0.0-alpha.20",
         "@mui/icons-material": "^5.16.7",
+        "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.16.7",
         "@mui/styles": "^6.1.2",
         "@mui/x-data-grid": "^5.17.26",
@@ -28,7 +28,7 @@
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
         "formik": "^2.2.6",
-        "formik-mui": "^5.0.0-alpha.1",
+        "formik-mui": "^4.0.0",
         "i18next": "^23.12.2",
         "jwt-decode": "^3.1.2",
         "react": "18.2.0",
