deps: update react18 to latest

--- a/common/package.json
+++ b/common/package.json
@@ -23,7 +23,7 @@
         "@types/fetch-mock": "^7.3.3",
         "@types/jest": "^26.0.23",
         "@types/node": "^15.12.1",
-        "@types/react": "^17.0.9",
+        "@types/react": "^18.3.11",
         "base64url": "^3.0.1",
         "fetch-mock": "^7.3.9",
         "i18next-resources-for-ts": "^1.5.0",
@@ -32,7 +32,7 @@
         "node-abort-controller": "^2.0.0",
         "node-fetch": "^2.6.1",
         "prettier": "^2.3.0",
-        "react": "18.2.0",
+        "react": "^18.3.1",
         "react-i18next": "^15.0.2",
         "react-test-renderer": "18.2.0",
         "ts-jest": "^28.0.8",
