--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
         "@types/node": "^12.19.14",
         "@types/react": "^18.3.11",
         "@types/react-csv": "^1.1.1",
-        "@types/react-dom": "^18.3.0",
+        "@types/react-dom": "^18.3.1",
         "@types/react-router-dom": "^5.1.7",
         "bootstrap": "^4.5.3",
         "browser-image-compression": "^1.0.17",
@@ -31,12 +31,12 @@
         "formik-mui": "^4.0.0",
         "i18next": "^23.12.2",
         "jwt-decode": "^3.1.2",
-        "react": "18.2.0",
+        "react": "^18.3.1",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.3.1",
         "react-i18next": "^15.0.0",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^5.3.3",
         "react-scripts": "5.0.1",
         "recharts": "^2.7.2",
         "socket.io-client": "^4.7.1",
