--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,99 +1,107 @@
 {
-    "engines": {
-        "node": ">=18.20.4 <19"
-    },
-    "scripts": {
-        "start": "react-native start",
-        "android": "react-native run-android",
-        "build": "node build.js",
-        "bundle": "node build.js --bundle",
-        "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz",
-        "clean-rebuild": "cd android && ./gradlew clean && cd .. && npm start -- --reset-cache",
-        "clean-rebuild-full": "cd android && ./gradlew clean && cd .. && rm -rf node_modules && npm run refresh-common && npm install && npm start -- --reset-cache"
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.25.7",
-        "@cbr/common": "file:cbr-common-1.0.0.tgz",
-        "@expo/vector-icons": "^13.0.0",
-        "@formatjs/intl-datetimeformat": "^4.1.6",
-        "@formatjs/intl-displaynames": "^5.1.6",
-        "@formatjs/intl-getcanonicallocales": "^1.7.1",
-        "@formatjs/intl-listformat": "^6.2.6",
-        "@formatjs/intl-locale": "^2.4.33",
-        "@formatjs/intl-numberformat": "^7.1.5",
-        "@formatjs/intl-pluralrules": "^4.0.28",
-        "@formatjs/intl-relativetimeformat": "^9.1.7",
-        "@gorhom/bottom-sheet": "^4.1.3",
-        "@nozbe/watermelondb": "^0.26.0",
-        "@react-native-async-storage/async-storage": "1.17.11",
-        "@react-native-community/datetimepicker": "6.7.3",
-        "@react-native-community/netinfo": "9.3.7",
-        "@react-native-picker/picker": "^2.4.8",
-        "@react-navigation/material-bottom-tabs": "^5.3.15",
-        "@react-navigation/native": "^5.9.4",
-        "@react-navigation/stack": "^5.14.5",
-        "@shopify/react-native-skia": "^1.5.3",
-        "@types/react-native-vector-icons": "^6.4.6",
-        "async-mutex": "0.5.0",
-        "core-js": "^3.15.2",
-        "dotenv": "^10.0.0",
-        "expo": "^48.0.0",
-        "expo-background-fetch": "~11.1.1",
-        "expo-cli": "^6.3.2",
-        "expo-image-manipulator": "~11.1.1",
-        "expo-image-picker": "~14.1.1",
-        "expo-localization": "~14.1.1",
-        "expo-splash-screen": "~0.18.1",
-        "expo-status-bar": "~1.4.4",
-        "expo-task-manager": "~11.1.1",
-        "expo-updates": "~0.16.3",
-        "formik": "^2.2.9",
-        "i18next": "^23.16.2",
-        "in": "^0.19.0",
-        "mobile": "^0.0.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-i18next": "^15.0.0",
-        "react-native": "0.71.3",
-        "react-native-background-timer": "^2.4.1",
-        "react-native-dotenv": "^3.2.0",
-        "react-native-elements": "^3.4.2",
-        "react-native-gesture-handler": "~2.9.0",
-        "react-native-keyboard-aware-scroll-view": "^0.9.4",
-        "react-native-multiple-select": "^0.5.6",
-        "react-native-multiple-select-list": "^1.0.4",
-        "react-native-paper": "^4.12.8",
-        "react-native-progress-steps": "^1.3.4",
-        "react-native-reanimated": "~2.14.4",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-svg": "13.4.0",
-        "react-native-vector-icons": "^8.1.0",
-        "react-native-web": "~0.18.11",
-        "react-navigation": "^4.4.4",
-        "react-redux": "^7.2.6",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.1.2",
-        "socket.io-client": "^4.3.2",
-        "victory-native": "^36.3.1",
-        "yup": "^0.32.9"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@babel/plugin-proposal-decorators": "^7.15.8",
-        "@expo/config-types": "^41.0.0",
-        "@types/node": "^15.12.2",
-        "@types/react": "^18.3.3",
-        "@types/react-native": "~0.71.3",
-        "@types/react-native-material-dropdown": "^0.11.4",
-        "@types/react-router-dom": "^5.1.7",
-        "better-sqlite3": "^7.4.4",
-        "prettier": "2.3.0",
-        "react-native-vector-icons": "^8.1.0",
-        "react-navigation": "^4.4.4",
-        "typescript": "^5.6.2"
-    },
-    "private": true,
-    "name": "mobile",
-    "version": "1.0.0"
+  "engines": {
+    "node": ">=18.20.4 <19"
+  },
+  "scripts": {
+    "start": "expo run:android",
+    "reset-project": "node ./scripts/reset-project.js",
+    "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz",
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.25.7",
+    "@cbr/common": "file:cbr-common-1.0.0.tgz",
+    "@expo/vector-icons": "^14.0.2",
+    "@formatjs/intl-datetimeformat": "^4.1.6",
+    "@formatjs/intl-displaynames": "^5.1.6",
+    "@formatjs/intl-getcanonicallocales": "^1.7.1",
+    "@formatjs/intl-listformat": "^6.2.6",
+    "@formatjs/intl-locale": "^2.4.33",
+    "@formatjs/intl-numberformat": "^7.1.5",
+    "@formatjs/intl-pluralrules": "^4.0.28",
+    "@formatjs/intl-relativetimeformat": "^9.1.7",
+    "@gorhom/bottom-sheet": "^4.1.3",
+    "@nozbe/watermelondb": "^0.27.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.2.0",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "async-mutex": "0.5.0",
+    "events": "^3.3.0",
+    "expo": "~51.0.28",
+    "expo-background-fetch": "~12.0.1",
+    "expo-build-properties": "~0.12.5",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.1.0",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-task-manager": "~11.8.2",
+    "expo-updates": "~0.25.28",
+    "expo-web-browser": "~13.0.3",
+    "formik": "^2.2.9",
+    "i18next": "^23.16.2",
+    "in": "^0.19.0",
+    "mobile": "^0.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^15.0.0",
+    "react-native": "0.74.5",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-dotenv": "^3.2.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-multiple-select": "^0.5.6",
+    "react-native-multiple-select-list": "^1.0.4",
+    "react-native-paper": "^4.12.8",
+    "react-native-progress-steps": "^1.3.4",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.19.10",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.2",
+    "socket.io-client": "^4.3.2",
+    "victory-native": "^36.3.1",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^15.12.2",
+    "@types/react": "^18.3.3",
+    "@types/react-native-material-dropdown": "^0.11.4",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^18.0.7",
+    "better-sqlite3": "^11.5.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "prettier": "2.3.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^5.6.2"
+  },
+  "private": true,
+  "name": "mobile",
+  "version": "1.0.0"
 }
