--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -58,8 +58,8 @@ jobs:
       # Select version 6.2: Java 11.x, Node 14.x, Android tools 33.0
       # TODO: Update this version to support Android tools version 34?
       # image: reactnativecommunity/react-native-android:6.2
-      # todosd: bump this more?  for now, support for Node 18.x
-      image: reactnativecommunity/react-native-android:9
+      # todosd: bump this more?  for now, support for Node 18.20
+      image: reactnativecommunity/react-native-android:13.1
     timeout-minutes: 60
     env:
       # Keep Gradle's settings file out of home directory (mounted from host)
