--- a/common/package.json
+++ b/common/package.json
@@ -23,6 +23,7 @@
         "@types/fetch-mock": "^7.3.3",
         "@types/jest": "^28.1.3",
         "@types/node": "^15.12.1",
+        "@types/node-fetch": "^2.6.12",
         "@types/react": "^18.3.11",
         "base64url": "^3.0.1",
         "fetch-mock": "^7.3.9",
