--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -74,7 +74,7 @@ jobs:
       run:  echo "::set-output name=stdout::$(date -u +%Y-%m-%d-%H%M%S%z)"
 
     - name: Create working directory
-      run:  mkdir /isolated_build/repo/mobile/android/app 
+      run:  mkdir -p /isolated_build/repo/mobile/android/app 
 
     - name: Setup Release Keystore for Play Store
       run:  |
